scss/parts/header.scss
:root {
  --site-header-height: #{$header-bar-height};
  --site-header-offset: #{$header-bar-height};
  --page-header-gap: 20px;
  --admin-offset: 0px;
  @include media-breakpoint-down(lg) {
    --site-header-height: 48px;
    --site-header-offset: 48px;
  }
}

.admin-bar {
  --admin-offset: 32px;
}

@include media-breakpoint-down(uxl) {
  :root {
    --site-header-height: #{$header-bar-height-uxl};
    --site-header-offset: #{$header-bar-height-uxl};
  }
}

@media (max-width: 782px) {
  .admin-bar {
    --admin-offset: 32px;
  }
}

.flc-main-nav.is-hidden {
  transform: translateY(calc(-100% - var(--admin-offset)));
}

/* stato body */
body.site-header-visible {
  --site-header-offset: var(--site-header-height);
  @include media-breakpoint-down(lg) {
    --site-header-offset: 48px;
  }
}

body.site-header-hidden {
  --site-header-offset: 0px;
}

/* spazio globale per il contenuto pagina */
body {
  padding-top: var(--site-header-offset);
}

.flc-main-nav {
  background-color: $primary;
  position: fixed;
  z-index: 3;
  top: var(--admin-offset);
  left: 0;
  right: 0;
  border-bottom: 1px solid $grey800;
  height: var(--site-header-height);
  display: flex;
  align-items: center;
  transform: translateY(0);
  transition: transform 0.35s ease;
  will-change: transform;
  @include media-breakpoint-down(lg) {
    height: 48px;
  }
  .flc-main-nav-inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .flc-main-nav-container {
    @include media-breakpoint-up(md) {
      display: flex;
      flex-direction: column;
      .flc-lang-switcher {
        display: flex;
      }
    }
  }
  @include media-breakpoint-down(md) {
    .flc-main-nav-inner {
      padding: 0;
    }
  }
}

.flc-lang-switcher {
  padding-right: 100px;
}

.flc-nav-container {
  .navbar-nav:not(.flc-rightmenu) {
    > li {
      //padding: 0 2rem;
      > a {
        color: #fff;
        text-decoration: none;
        font-weight: 400;
        padding: 0.6rem 0;
        display: block;
        position: relative;
        font-family: $headings-font-family;
        font-size: 18px;
        @include media-breakpoint-down(uxl) {
          font-size: 16px;
        }
        @include media-breakpoint-down(lg) {
          font-size: 14px;
        }
        @include media-breakpoint-up(md) {
          &::after {
            content: none;
          }
        }
      }
      &.current_page_item,
      &.current-menu-item {
        @include media-breakpoint-up(md) {
          &:hover {
            > a {
              &::after {
                //background-color: #fff;
              }
            }
          }
        }
      }
      &:hover {
        > a {
          font-weight: 700;
        }
      }
    }
  }
  @include media-breakpoint-up(md) {
    .navbar-nav {
      > li {
        padding: 0 1rem;
      }
    }
  }
  @include media-breakpoint-up(sxl) {
    .navbar-nav {
      > li {
        padding: 0 1.5rem;
      }
    }
  }
}

.single-products,
.tax-products_category,
.tag,
.page-template-filtered-tag {
  .flc-nav-container {
    .navbar-nav {
      > li {
        &.menu-item-8 {
          > a {
            &::after {
              right: 0;
              background-color: #fff;
            }
          }
        }
      }
    }
  }
}

.single-post {
  .flc-nav-container {
    .navbar-nav {
      > li {
        &.menu-item-100 {
          > a {
            &::after {
              right: 0;
              background-color: #fff;
            }
          }
        }
      }
    }
  }
}

.flc-main-header {
  display: flex;
  .flc-claim {
    padding-left: 1rem;
    margin-left: 1rem;
    border-left: 1px solid #fff;
    > span {
      font-size: 11px;
      line-height: 11px;
      display: block;
    }
  }
}

//all mobile menu styles
@include media-breakpoint-down(md) {
  .mob-menu-open {
    .flc-nav-mobile-container {
      //opacity: 1;
      transform: translateX(0);
      z-index: 4;
    }
  }
  .flc-nav-mobile-container {
    position: fixed;
    top: 60px;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    //align-items: flex-start;
    transition: all 200ms ease-in-out;
    transform: translateX(-100%);
    background: $black-opacity;
    //opacity: 0;
    //pointer-events: none;
    z-index: 1;
    //align-items: center;
    .nav-link {
      color: $primary;
    }
  }
}

.fake-language-switcher {
  visibility: hidden;
}
.flc-logo-mobile {
  width: auto;
}
.wpml-ls-menu-item {
  > .sub-menu {
    position: absolute;
    list-style: none;
    background: transparent;
    padding-top: 10px;
    display: none;
    transition: 0.5s;
    padding-left: 0;
    .wpml-submenu-wrapper {
      background-color: $black-opacity;
      padding: 10px;
      a {
        color: #fff;
      }
    }
  }
}
.flc-right-nav {
  .flc-headmenu {
    > .wpml-ls-item {
      position: relative;
      > a {
        &:hover::after {
          background-color: transparent;
          right: initial;
        }
        :after {
          content: "\e313";
          font-family: "Material Symbols Outlined";
          top: 50%;
          right: -8px;
          transform: translate(100%, -50%);
          font-size: 20px;
          position: absolute;
          height: auto;
        }
      }
      .sub-menu {
        width: 100%;
        right: 0;
        @include media-breakpoint-down(md) {
          display: block;
          width: fit-content;
          right: auto;
          left: 50%;
          transform: translateX(-50%);
          padding-top: 8px !important;
        }
        .wpml-ls-item {
          a {
            justify-content: center;
            text-decoration: none;
          }
        }
      }
    }
  }
}
.btn-custom-header {
  border: 1px solid #ffffff;
  border-radius: 8px;
  padding: 0 1rem !important;
  &:hover {
    background-color: #fff;
    > a {
      color: #000 !important;
      &::after {
        background-color: transparent !important;
      }
    }
  }
  a {
    padding: 7.5px 0;
    display: flex !important;
    align-items: center;
    gap: 1rem;
    &:after {
      content: "\f8ce" !important;
      font-family: "Material Symbols Outlined";
      position: relative !important;
      height: auto !important;
    }
  }
}

.flc-main-nav {
  .flc-logo {
    img {
      max-height: 30px;
      @include media-breakpoint-down(lg) {
        max-height: 16px;
      }
    }
  }
}
.js-toggle-menu {
  font-size: 30px !important;
}
.flc-headmenu-mobile,
.flc-rightmenu {
  width: 100%;
  li {
    padding-left: 0 !important;
    .nav-link {
      padding: 1.5rem 0 !important;
      margin-bottom: 0;
    }
  }
}
.flc-headmenu-mobile {
  > li {
    border-top: 1px solid $grey800;
  }
  li {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
}
.flc-search-container {
  width: 100vw !important;
  height: calc(100vh - $header-bar-height) !important;
  position: fixed !important;
  left: 0 !important;
  top: $header-bar-height !important; /* Si posiziona sotto la navbar */
  margin: 0;
  padding: 0;
  border-radius: 0;
  border: none;
  background-color: $primary !important;
  transform: none !important;
  &.show{
      display: flex !important;
  }
  > .container-fluid{
      height: calc(100vh - $header-bar-height) !important;
      overflow-y: scroll;
  }
  @include media-breakpoint-down(uxl) {
      top: 79px !important; /* Si posiziona sotto la navbar */
      height: calc(100vh - 79px) !important;
  }
}

